Dynamical font size with screen resolution

--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>561</height>
+    <width>813</width>
+    <height>547</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -72,7 +72,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -226,111 +226,71 @@ Interpolation Algorithm:</string>
        <attribute name="title">
         <string>Algorithm Settings and Test</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_12">
-        <item row="1" column="0">
-         <widget class="QGroupBox" name="groupBox_8">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
+       <layout class="QGridLayout" name="gridLayout_6">
+        <item row="3" column="1">
+         <widget class="QRadioButton" name="output_plots">
+          <property name="text">
+           <string>Output Plots</string>
           </property>
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <property name="autoExclusive">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QRadioButton" name="show_plots">
+          <property name="enabled">
+           <bool>false</bool>
           </property>
           <property name="maximumSize">
            <size>
-            <width>16777215</width>
+            <width>300</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="title">
-           <string>Settings for Test Input/Output</string>
+          <property name="text">
+           <string>Show Plots</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_6">
-           <item row="1" column="0" rowspan="2">
-            <widget class="QRadioButton" name="show_plots">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>300</width>
-               <height>16777215</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Show Plots</string>
-             </property>
-             <property name="autoExclusive">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QRadioButton" name="output_plots">
-             <property name="text">
-              <string>Output Plots</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-             <property name="autoExclusive">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <widget class="QRadioButton" name="use_current_images">
-             <property name="text">
-              <string>a ) Use Selected Images 
-(if still not converted it will be done now)</string>
-             </property>
-             <property name="checked">
-              <bool>false</bool>
-             </property>
-             <attribute name="buttonGroup">
-              <string notr="true">buttonGroup_8</string>
-             </attribute>
-            </widget>
-           </item>
-           <item row="1" column="2">
-            <widget class="QLabel" name="label_7">
-             <property name="text">
-              <string>b) Use all Converted Images in Output Data Directory:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="4">
-            <widget class="QRadioButton" name="use_converted_i607">
-             <property name="text">
-              <string> ./i607_converted_images</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-             <attribute name="buttonGroup">
-              <string notr="true">buttonGroup_8</string>
-             </attribute>
-            </widget>
-           </item>
-           <item row="1" column="4">
-            <widget class="QRadioButton" name="use_converted_i203">
-             <property name="text">
-              <string> ./i203_converted_images</string>
-             </property>
-             <attribute name="buttonGroup">
-              <string notr="true">buttonGroup_8</string>
-             </attribute>
-            </widget>
-           </item>
-          </layout>
+          <property name="autoExclusive">
+           <bool>false</bool>
+          </property>
          </widget>
         </item>
-        <item row="0" column="0">
+        <item row="3" column="2">
+         <widget class="QRadioButton" name="use_current_images">
+          <property name="text">
+           <string>a ) Use Selected Images 
+(if still not converted it will be done now)</string>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="3">
+         <widget class="QRadioButton" name="use_converted_i203">
+          <property name="text">
+           <string> ./i203_converted_images</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_23">
+          <property name="font">
+           <font>
+            <weight>75</weight>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>Settings for Sanity Check Input/Output</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" rowspan="2" colspan="5">
          <widget class="QTabWidget" name="tabWidget_2">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -1234,6 +1194,23 @@ Precision:</string>
           </widget>
          </widget>
         </item>
+        <item row="3" column="3">
+         <widget class="QRadioButton" name="use_converted_i607">
+          <property name="text">
+           <string> ./i607_converted_images</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="2">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>b) Use all Converted Images in Output Data Directory:</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="tab_7">
@@ -1324,16 +1301,6 @@ Precision:</string>
           </attribute>
          </widget>
         </item>
-        <item row="6" column="2">
-         <widget class="QPushButton" name="stopCamera">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>STOP Camera</string>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="0">
          <widget class="QRadioButton" name="use_PiCamera">
           <property name="text">
@@ -1347,7 +1314,37 @@ Precision:</string>
           </attribute>
          </widget>
         </item>
-        <item row="14" column="0" colspan="3">
+        <item row="5" column="2">
+         <widget class="QPushButton" name="runCamera">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>RUN Camera</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="QCheckBox" name="liveH">
+          <property name="text">
+           <string>H - Radial Histogram</string>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup_7</string>
+          </attribute>
+         </widget>
+        </item>
+        <item row="5" column="3">
+         <widget class="QPushButton" name="stopCamera">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>STOP Camera</string>
+          </property>
+         </widget>
+        </item>
+        <item row="14" column="0" colspan="4">
          <widget class="QTabWidget" name="tabWidget_3">
           <property name="currentIndex">
            <number>2</number>
@@ -1590,26 +1587,6 @@ In chunks of:</string>
           </widget>
          </widget>
         </item>
-        <item row="5" column="2">
-         <widget class="QPushButton" name="runCamera">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>RUN Camera</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="2">
-         <widget class="QCheckBox" name="liveH">
-          <property name="text">
-           <string>H - Radial Histogram</string>
-          </property>
-          <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_7</string>
-          </attribute>
-         </widget>
-        </item>
        </layout>
       </widget>
      </widget>
@@ -1621,7 +1598,7 @@ In chunks of:</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>813</width>
      <height>21</height>
     </rect>
    </property>
